--- a/Anhang.tex
+++ b/Anhang.tex
@@ -17,12 +17,12 @@
 \input{Anhang/AnhangIterationsplan.tex}
 \clearpage
 
-\subsection{Use Case-Diagramm}
+\subsection{Use-Case-Diagramm}
 \label{app:UseCase}
 \begin{figure}[htb]
 \centering
 \includegraphicsKeepAspectRatio{UseCase.pdf}{0.7}
-\caption{Use Case-Diagramm}
+\caption{Use-Case-Diagramm}
 \end{figure}
 
 \input{Anhang/AnhangPflichtenheft.tex}
