--- a/Anhang/AnhangScreenshots.tex
+++ b/Anhang/AnhangScreenshots.tex
@@ -45,7 +45,7 @@
 \begin{figure}[htb]
 \centering
 \includegraphicsKeepAspectRatio{RRP3EditMode.png}{1}
-\caption{Kommentare in der RRP3 zum editieren}
+\caption{Kommentare in der RRP3 zum Editieren}
 \end{figure}
 \clearpage
 \begin{figure}[htb]
@@ -57,6 +57,6 @@
 \begin{figure}[htb]
 \centering
 \includegraphicsKeepAspectRatio{COR2.png}{1}
-\caption{Kommentar in der COR2 zum bearbeiten}
+\caption{Kommentar in der COR2 zum Bearbeiten}
 \end{figure}
 \clearpage
