--- a/Bibliographie.bib
+++ b/Bibliographie.bib
@@ -56,3 +56,13 @@
   YEAR = {2006},
   PUBLISHER = {Galileo Press}
 }
+
+@BOOKLET{Wiki.Induux,
+  title = {Wiki.Induux},
+  author = {Wiki.Induux-Website},
+  lastchecked = {04.12.2018},
+  year = {2018},
+  owner = {},
+  timestamp = {2018.12.4},
+  url = {https://wiki.induux.de/Lastenheft}
+}
