--- a/Inhalt/Einleitung.tex
+++ b/Inhalt/Einleitung.tex
@@ -5,11 +5,11 @@ Das folgende Projekt ist mein IHK-Abschlussprojekt, welches im Rahmen meiner Aus
 
 \subsection{Vorstellung des Betriebs und meiner Selbst} 
 \label{sec:Vorstellung des Betriebs und meiner Selbst}
-Am 01. März 2017 habe ich meine Ausbildung bei der Spreitzenbarth Consultants GmbH begonnen, einem Unternehmen mit 50 Mitarbeitern und Fokus auf Supply Chain Management. Dort habe ich hauptsächlich Web Anwendungen mit ASP.NET MVC und AngularJs sowie Windows Applikationen mit C\# programmiert. Aufgrund der Firmen Auflösung musste ich meinen Ausbildungsbetrieb wechseln und bin seit 01. Juni 2018 bei der Camelot ITLab GmbH beschäftigt. Hier beschäftige ich mich mit dem gesamten SAP Umfeld und lerne die Programmiersprache \ac{ABAP}.
+Am 01. März 2017 habe ich meine Ausbildung bei der Spreitzenbarth Consultants GmbH begonnen, einem Unternehmen mit 50 Mitarbeitern und Fokus auf Supply Chain Management. Dort habe ich hauptsächlich Web Anwendungen mit ASP.NET MVC und AngularJs sowie Windows Applikationen mit C\# programmiert. Aufgrund der Firmenauflösung musste ich meinen Ausbildungsbetrieb wechseln und bin seit 01. Juni 2018 bei der Camelot ITLab GmbH beschäftigt. Hier beschäftige ich mich mit dem gesamten SAP Umfeld und lerne die Programmiersprache \ac{ABAP}.
 
 \subsection{Projektziel} 
 \label{sec:Projektziel}
-Im SAP \ac{APO} bzw. im SAP \ac{ECC} hat der Planer die Möglichkeit, Prozess-, Produktions- und Plan-Aufträge manuell anzulegen bzw. vorhandene Planaufträge zu editieren. Allerdings gibt es hier keine Möglichkeit, dazu eine Notiz oder eine Beschreibung zu hinterlegen. Projektziel ist die Erstellung von Programmen, die es dem Planer ermöglichen, Kommentare	für Aufträge zu erstellen und anzusehen. Außerdem sollen bereits vorhandene Programme entsprechend erweitert werden, um den Planer bestmöglich zu Unterstützen. Da dieses Projekt ein internes Projekt ist, wurden alle Anforderungen in innerbetrieblichen Besprechungen erarbeitet. Bei der Implementierung wurde besonders darauf geachtet, einen leicht zu erweiternden Code zu produzieren, da in zukünftigen Versionen noch weiter Feature hinzugefügt werden solle, wie z.B. ein Kommentarverlauf, sodass der Planer auch vorherige Versionen von Kommentaren anschauen kann. 
+Im SAP \ac{APO} bzw. im SAP \ac{ECC} hat der Planer die Möglichkeit, Prozess-, Produktions- und Plan-Aufträge manuell anzulegen bzw. vorhandene Planaufträge zu editieren. Allerdings gibt es hier keine Möglichkeit, dazu eine Notiz oder eine Beschreibung zu hinterlegen. Projektziel ist die Erstellung von Programmen, die es dem Planer ermöglichen, Kommentare	für Aufträge zu erstellen und anzusehen. Außerdem sollen bereits vorhandene Programme entsprechend erweitert werden, um den Planer bestmöglich zu unterstützen. Da dieses Projekt ein internes Projekt ist, wurden alle Anforderungen in innerbetrieblichen Besprechungen erarbeitet. Bei der Implementierung wurde besonders darauf geachtet, einen leicht zu erweiternden Code zu produzieren, da in zukünftigen Versionen noch weiter Feature hinzugefügt werden sollen, wie z.B. ein Kommentarverlauf, sodass der Planer auch vorherige Versionen von Kommentaren anschauen kann. 
 
 \subsection{Projektumfeld}
 \label{sec:Projektumfeld}
@@ -17,11 +17,9 @@ Die Camelot ITLab GmbH ist eine im SAP-Umfeld tätige Unternehmensberatung, die 
 
 \subsection{Projektbeteiligte Personen} 
 \label{sec:Projektbeteiligte Personen}
-Tabelle~\ref{tab:BeteiligtePer} zeigt alle Personen die an dem Projekt beteiligt waren.
+Tabelle~\ref{tab:BeteiligtePer} zeigt alle Personen, die an dem Projekt beteiligt waren.
 \tabelle{Beteiligte Personen}{tab:BeteiligtePer}{BeteiligtePersonen}
 
 \subsection{Projektbegründung} 
 \label{sec:Projektbegruendung}
-Das Projekt wurde von dem Camelot ITLab angenommen, da es ein häufig von Kunden angefragtes und hilfreiches Feature ist, welches in der standard SAP Lösung fehlt.
-
-//TODO warum Notizen usw.
+Da die im ~\nameref{sec:Projektziel} beschriebenen Funktionalitäten für den Planer äußerst hilfreich sind und diese schon oft von Kunden angefragt wurden, da es etwas Vergleichbares auf dem Markt bzw. im SAP Standard noch nicht gibt, wurde dieses Projekt von der Camelot ITLab GmbH angenommen. 
