--- a/Inhalt/Fazit.tex
+++ b/Inhalt/Fazit.tex
@@ -12,4 +12,4 @@ Die Zeit von 70 Stunden und der in Abschnitt ~\ref{sec:Projektphasen} (\nameref{
 
 \subsection{Ausblick}
 \label{sec:Ausblick}
-Alle im Lastenheft definierten Anforderungen konnten erfüllt werden, nichts desto trotz möchte ich hier einen kleinen Ausblick über mögliche weiter Feature geben die während der Entwicklung aufgefallen und als praktisch erachtet wurden. Zum einen gibt es noch weitere Transaktionen die erweiter werden können wie z.B. die Feinplantafel um den Planer noch mehr Komfort zu bieten. Außerdem soll man in einer späteren Version im \ac{ECC} im Administration Screen nicht nur einen Feldnamen angeben können, sondern auch die Datenbanktabelle bzw. mehrere Einträge vornehmen können. Außerdem soll in absehbarer zukunft ein Lösch Programm geschrieben werden, dass die Aufträge welche sich im ECC System in der /CAMELOT/OC\_COMT Datenbanktabelle befinden überprüft und Aufträge welche nicht mehr existieren aus der Tabelle löscht. Aufgrund des in Abschnitt ~\ref{sec:Architecturedesign} beschriebenen Aufbaus des Programms lassen sich Änderungen und Anpassungen sehr einfach vornehmen. Außerdem erhöht dies die Wartbarkeit der Programme, da alle Mitarbeiter des Camelot ITLabs sich besondern mit dieser Struktur auskennen. 
+Alle im Lastenheft definierten Anforderungen konnten erfüllt werden.Dennoch möchte ich hier einen kleinen Ausblick auf mögliche weitere Feature geben, die während der Entwicklung aufgefallen und als praktisch erachtet wurden. Zum einen gibt es noch weitere Transaktionen, die erweiter werden können wie z.B. die MD04, um den Planer noch mehr Komfort zu bieten. Außerdem sollte man in einer späteren Version im \ac{ECC} im Administration Screen nicht nur einen Feldnamen angeben können, sondern auch die Datenbanktabelle bzw. mehrere Einträge vornehmen können. Außerdem sollte in absehbarer Zukunft ein Lösch Programm geschrieben werden, das die Aufträge, welche sich im ECC System in der /CAMELOT/OC\_COMT Datenbanktabelle befinden überprüft und Aufträge welche nicht mehr existieren aus der Tabelle löscht. Aufgrund des in Abschnitt~\nameref{sec:Architekturdesign} beschriebenen Aufbaus des Programms lassen sich Änderungen und Anpassungen sehr einfach vornehmen. Außerdem erhöht dies die Wartbarkeit der Programme, da alle Mitarbeiter des Camelot ITLabs sich besondern mit dieser Struktur auskennen. 
