--- a/Meta.tex
+++ b/Meta.tex
@@ -10,7 +10,7 @@
 \newcommand{\autorOrt}{68199 Mannheim}
 
 \newcommand{\betriebLogo}{LogoBetrieb.pdf}
-\newcommand{\betriebName}{\textsc{Camelot ITLab}}
+\newcommand{\betriebName}{\textsc{Camelot ITLab GmbH}}
 \newcommand{\betriebAnschrift}{Theodor-Heuss-Anlage. 12}
 \newcommand{\betriebOrt}{68165 Mannheim}
 
