--- a/Transaktionsverzeichnis.tex
+++ b/Transaktionsverzeichnis.tex
@@ -1,11 +1,11 @@
 % !TEX root = Projektdokumentation.tex
 \textbf{COR1-3}:
 \linebreak
-Diese Transaktion ist zum Erstellen, bearbeiten und anzeigen von Prozess Aufträgen
+Diese Transaktion ist zum Erstellen, Bearbeiten und Anzeigen von Prozessaufträgen
 
-\textbf{SAPAPO/RRP3}:
+\textbf{/SAPAPO/RRP3}:
 \linebreak
-Mithilfe der Produktsicht lassen sich zu einer vorher definierten Produkt-Werks Kombination alle Forcasts, Prozessaufträge, Planaufträge, Produktionsaufträge, Kaufanforderungen und vieles mehr anzeigen lassen.
+Mithilfe der Produktsicht lassen sich zu einer vorher definierten Produkt-Werkskombination alle Forcasts, Prozessaufträge, Planaufträge, Produktionsaufträge, Kaufanforderungen und vieles mehr anzeigen lassen.
 
 \textbf{CMOD}:
 \linebreak
