--- a/Abkuerzungen.tex
+++ b/Abkuerzungen.tex
@@ -24,5 +24,5 @@
 	\acro{PBO}{Process Before Output}
 	\acro{PAI}{Process After Input}
 	\acro{RFC}{Remote Function Call}
-	\acro{UML}{Unified Modeling language}
+	\acro{UML}{Unified Modeling Language}
 \end{acronym}
