--- a/Inhalt/Projektplanung.tex
+++ b/Inhalt/Projektplanung.tex
@@ -4,15 +4,15 @@
 
 \subsection{Projektphasen}
 \label{sec:Projektphasen}
-Für das Projekt standen 70 Stunden zur Verfügung. Diese waren sowohl für die Umsetzung des Projekts als auch für die Dokumentation gedacht. Vor Projektbeginn wurde das Projekt in mehrere Phasen gesplittet und die Stunden aufgeteilt. Tabelle~\ref{tav:Zeitplan} zeigt eine grobe Übersicht über die einzelnen Phasen und die geplante Zeit. 
+Für das Projekt standen 70 Stunden zur Verfügung. Diese waren sowohl für die Umsetzung des Projekts als auch für die Dokumentation gedacht. Vor Projektbeginn wurde das Projekt in mehrere Phasen gesplittet und die Stunden aufgeteilt. Tabelle~\ref{tab:Zeitplanung} zeigt eine grobe Übersicht über die einzelnen Phasen und die geplante Zeit. 
 
 \tabelle{Zeitplanung}{tab:Zeitplanung}{ZeitplanungKurz}
 Eine detailliertere Zeitplanung findet sich im \Anhang{app:Zeitplanung}.
 
 \subsection{Ressourcenplanung}
 \label{sec:Ressourcenplanung}
-In der Ressourcenübersicht \Anhang{app:Ressourcen}, sind alle Ressourcen aufgelistet, die für das Projekt eingesetzt wurden. Damit sind sowohl Hardware, Software und das Personal gemeint. Sie diente dazu vorab zu überprüfen ob alle benötigten Mittel zur Verfügung stehen und um bei den beteiligten Personen entsprechen Zeit für z.B. Code Reviews zu buchen. Es wurde darauf geachtet, dass nur Software zum Einsatz kommt welche entweder kostenfrei (z.B. als Freeware oder gar Open Source) angeboten werden oder die Camelot AG bereits Lizenzen für diese besitzt und zur Verfügung stellen kann. Dadurch sollten die Projektkosten möglichst gering gehalten werden.
+In der Ressourcenübersicht \Anhang{app:Ressourcen} sind alle Ressourcen aufgelistet, die für das Projekt eingesetzt wurden. Damit sind sowohl Hardware, Software und das Personal gemeint. Sie diente dazu, vorab zu überprüfen ob alle benötigten Mittel zur Verfügung stehen und um bei den beteiligten Personen entsprechen Zeit für z.B. Code Reviews zu buchen. Es wurde darauf geachtet, dass nur Software zum Einsatz kommt welche entweder kostenfrei (z.B. als Freeware oder Open Source) angeboten werden oder für die die Camelot ITLab GmbH bereits Lizenzen besitzt. Dadurch sollten die Projektkosten möglichst gering gehalten werden.
 
 \subsection{Entwicklungsprozess}
 \label{sec:Entwicklungsprozess}
-Als Entwicklungsprozess wurde ein agiler Entwicklungsprozess gewählt, sodass während der Implementierung nach jeder Iterationsphase eine Rücksprache mit dem Ausbilder, Kunde und der Entwicklungsabteilung erfolgte. Aufgrund dieser Tatsache wurde bei der Projektplanung auch relativ wenig Zeit für die Entwurfsphase veranschlagt, da sich Teile dieser Phase erst während der Entwicklung ergaben. Die stetige Kommunikation mit der Entwicklungsabteilung förderte das Erzielen eines besseren Resultats.
+Als Entwicklungsprozess wurde ein agiler Entwicklungsprozess gewählt, sodass während der Implementierung nach jeder Iterationsphase eine Rücksprache mit dem Ausbilder, Kunden und der Entwicklungsabteilung erfolgte. Aufgrund dieser Tatsache wurde bei der Projektplanung auch relativ wenig Zeit für die Entwurfsphase veranschlagt, da sich Teile dieser Phase erst während der Entwicklung ergaben. Die stetige Kommunikation mit der Entwicklungsabteilung förderte das Erzielen eines besseren Resultats.
