--- a/Abkuerzungen.tex
+++ b/Abkuerzungen.tex
@@ -18,7 +18,8 @@
 	\acro{APO}{Advanced Planning and Optimization}
 	\acro{BAdI}{Business Add-In}
 	\acro{ERM}{En\-ti\-ty-Re\-la\-tion\-ship-Mo\-dell}
-	\acro{ECC}{ERP Central Component}
+	\acro{ERP}{Enterprise-Resource-Planning}
+	\acro{ECC}{\ac{ERP} Central Component}
 	\acro{GUI}{Graphical User Interface}
 	\acro{MVC}[MVC]{Model View Controller}
 	\acro{PBO}{Process Before Output}
