--- a/Inhalt/Einleitung.tex
+++ b/Inhalt/Einleitung.tex
@@ -9,7 +9,7 @@ Am 01. März 2017 habe ich meine Ausbildung bei der Spreitzenbarth Consultants G
 
 \subsection{Projektziel} 
 \label{sec:Projektziel}
-Im SAP \ac{APO} bzw. im SAP \ac{ECC} hat der Planer die Möglichkeit, Prozess-, Produktions- und Plan-Aufträge manuell anzulegen bzw. vorhandene Planaufträge zu editieren. Allerdings gibt es hier keine Möglichkeit, dazu eine Notiz oder eine Beschreibung zu hinterlegen. Projektziel ist die Erstellung von Programmen, die es dem Planer ermöglichen, Kommentare	für Aufträge zu erstellen und anzusehen. Außerdem sollen bereits vorhandene Programme entsprechend erweitert werden, um den Planer bestmöglich zu unterstützen. Da dieses Projekt ein internes Projekt ist, wurden alle Anforderungen in innerbetrieblichen Besprechungen erarbeitet. Bei der Implementierung wurde besonders darauf geachtet, einen leicht zu erweiternden Code zu produzieren, da in zukünftigen Versionen noch weiter Feature hinzugefügt werden sollen, wie z.B. ein Kommentarverlauf, sodass der Planer auch vorherige Versionen von Kommentaren anschauen kann. 
+Im SAP \ac{APO} bzw. im SAP \ac{ECC} gibt es verschiedene Arten von Aufträgen. Ein Auftrag im allgemeinen umfasst Produkte, Mengen, Ressourcen(Maschinen) und Zeit. Es gibt Planaufträge, eine Art Beschaffungsvorschlag, welche als internes planerisches Element genutzt werden und jederzeit geändert werden können. Diese werden dann Richtung Heutelinie zu  Prozess- bzw. Produktionsaufträge konvertiert, welche dann fix gebucht sind und nicht mehr geändert werden können. Der Planer die Möglichkeit, Prozess-, Produktions- und Plan-Aufträge manuell anzulegen bzw. vorhandene Planaufträge zu editieren. Allerdings is es nicht Möglich, Notizen oder Beschreibungen für diese zu hinterlegen. Projektziel ist die Erstellung von Programmen, die es dem Planer ermöglichen, Kommentare	für Aufträge zu erstellen und anzusehen. Außerdem sollen bereits vorhandene Programme entsprechend erweitert werden, um den Planer bestmöglich zu unterstützen. Da dieses Projekt ein internes Projekt ist, wurden alle Anforderungen in innerbetrieblichen Besprechungen erarbeitet. Bei der Implementierung wurde besonders darauf geachtet, einen leicht zu erweiternden Code zu produzieren, da in zukünftigen Versionen noch weiter Feature hinzugefügt werden sollen, wie z.B. ein Kommentarverlauf, sodass der Planer auch vorherige Versionen von Kommentaren anschauen kann. 
 
 \subsection{Projektumfeld}
 \label{sec:Projektumfeld}
