--- a/Inhalt/Implementierungsphase.tex
+++ b/Inhalt/Implementierungsphase.tex
@@ -8,7 +8,7 @@ Bevor mit der eigentlichen Implementierung begonnen wurde, wurde zuerst ein Inte
 
 \subsection{Implementierung der Datenstruktur ECC}
 \label{sec:Implementierung der Datenstruktur ECC}
-Zuerst wurden alle Dictionary-Objekte, welche im \ac{ECC} gebraucht werden, erstellt. Eine Vollständige Liste aller Tabellen Typen, Strukturen, Datenelemente und Domänen können dem Anhang entnommen werden. Außerdem wurden die Datenbank Tabellen wie in Kapitel~\ref{sec:Datenmodell}: ~\nameref{sec:Datenmodell} beschrieben implementiert. Die AUFK wurde mittels einem Custom Include um das Feld ZZ\_ORDER\_COMMENT erweitert.
+Zuerst wurden alle Dictionary-Objekte, welche im \ac{ECC} gebraucht werden, erstellt. Eine Vollständige Liste aller Tabellen Typen, Strukturen (einer Art mehrdimensionaler Array), Datenelemente und Domänen können dem Anhang entnommen werden. Außerdem wurden die Datenbank Tabellen wie in Kapitel~\ref{sec:Datenmodell}: ~\nameref{sec:Datenmodell} beschrieben implementiert. Die AUFK wurde mittels einem Custom Include um das Feld ZZ\_ORDER\_COMMENT erweitert.
 
 \subsection{Implementierung der Benutzeroberfläche ECC}
 \label{sec:Implementierung der Benutzeroberfläche ECC}
