some little changes

--- a/Anhang/AnhangIterationsplan.tex
+++ b/Anhang/AnhangIterationsplan.tex
@@ -19,7 +19,7 @@
 	\end{enumerate}
 	\item ECE Entwicklung
 	\begin{enumerate}
-		\item In den vorhandene Speicherlogiken den RFC einbauen
+		\item In den vorhandenen Speicherlogiken den RFC einbauen
 	\end{enumerate}
 	\item SCE Entwicklung
 	\begin{enumerate}
