--- a/Anhang/AnhangPflichtenheft.tex
+++ b/Anhang/AnhangPflichtenheft.tex
@@ -10,12 +10,12 @@
 		\begin{itemize}
 		\item Ein neues Package muss im ECC angelegt werden mit dem Namen /CAMELOT/OC.
 		\item Die AUFK Datenbanktabelle muss um ein Feld mit dem Namen ZZ/\_ORDER/\_COM-MENT erweitert werden
-		\item Ein extra Programm welches eine gefilterte Auswahl an Prozess-, Plan- und Produktions-Aufträgen anzeigt muss erstellt werden.
+		\item Ein extra Programm, welches eine gefilterte Auswahl an Prozess-, Plan- und Produktions-Aufträgen anzeigt, muss erstellt werden.
 		\item Ebenfalls sollen hier jeweils die Kommentare für die Aufträge angezeigt und vom User geändert werden können. 
-		\item Weiterhin soll dieses Programm massenänderungs fähig sein. 
-		\item Außerdem soll es ein zweites Programm geben, in welche der User einen Tabellenfeld der AUFK Datenbanktabelle angeben kann, welches dann für die Kommentare genutzt wird.
-		\item Mittels Input Checks soll verhindert werden, dass der User ein Feld angibt, dass es in der AUFK Tabelle nicht gibt
-		\item Zu aller Letzt soll die COR1-3 erweitert werden.
+		\item Weiterhin soll dieses Programm massenänderungsfähig sein. 
+		\item Außerdem soll es ein zweites Programm geben, in die der User ein Tabellenfeld der AUFK Datenbanktabelle angeben kann, welches dann für die Kommentare genutzt wird.
+		\item Mittels Input Checks soll verhindert werden, dass der User ein Feld angibt, das es in der AUFK Tabelle nicht gibt
+		\item Zum Schluss soll die COR1-3 erweitert werden.
 		\begin{itemize}
 			\item Ein neues Package muss angelegt werden mit dem Namen ZPP, in welches dann die COR Erweiterung kommt.
 			\item Mittels der cmod Transaktion muss ein neues Projekt mit dem Namen Z\_COR angelegt werden und zwei Erweiterungspunkte hinzugefügt werden (PPCO0007 und PPCO0020).
@@ -25,11 +25,11 @@
 		\begin{itemize}
 		\item Es muss ebenfalls ein neues Package angelegt werden /CAMELOT/OC
 		\item Die /SAPAPO/ORDFLDS muss um ein Feld mit dem Namen Order\_Comment erweitert werden.
-		\item Ebenso wie im ECC System soll es ein Programm geben, welches mittels vom User eingegebener Order Number einen Auftrag mit Kommentar anzeigt, welcher vom User geändert werden kann.
+		\item Ebenso wie im ECC System soll es ein Programm geben, welches mittels vom User eingegebener Order Number einen Auftrag mit Kommentar anzeigt, der vom User geändert werden kann.
 		\item Desweiteren soll die RRP3 erweitert werden.
 		\begin{itemize}
 			\item Es muss ein neues Package mit dem Namen ZSCM angelegt werden.
-			\item Mittels der se18 muss ein BAdI in diese Package implementiert werden.
+			\item Mittels der se18 muss ein BAdI in dieses Package implementiert werden.
 			\item Die Logik muss programmiert werden.
 			\item Eine implizite Erweiterung muss angelegt werden, um die T\_style Tabelle zu manipulieren.
 		\end{itemize}
