--- a/Anhang/AnhangLastenheft.tex
+++ b/Anhang/AnhangLastenheft.tex
@@ -1,21 +1,19 @@
 \subsection{Lastenheft (Auszug)}
 \label{app:Lastenheft}
-Es folgt ein Auszug aus dem Lastenheft mit Fokus auf die Anforderungen:
 
 Die Anwendungen müssen folgende Anforderungen erfüllen: 
 \begin{enumerate}[itemsep=0em,partopsep=0em,parsep=0em,topsep=0em]
 \item Darstellung der Daten
 	\begin{enumerate}
-	\item Die Anwendung muss eine die Funktion bieten die Aufträge zu nach vorgegebenen Kriterien zu filter.
-	\item Die Aufträge müssen in einer, für den Planer guten Umgebung, dargestellt werden.
-	\item Die Aufträge sollen übersichtlich dargestellt werden. 
-	\item Der Planer soll die möglichst einfach und schnell Kommentare schreiben und anzeigen können. 
-	\item Der Planer soll zudem auch in den gewohnten standard Anwendungen Kommentare verfassen und Lesen können 
+	\item Die Anwendung muss die Funktion bieten Aufträge nach vorgegebenen Kriterien filter zu können.
+	\item Die Aufträge müssen in einer für den Planer übersichtlichen Umgebung dargestellt werden.
+	\item Der Planer soll möglichst einfach und schnell Kommentare schreiben und anzeigen können. 
+	\item Der Planer soll zudem auch in den gewohnten Standardanwendungen Kommentare verfassen und lesen können 
 	\end{enumerate}
 \item Weitere Anforderungen
 	\begin{enumerate}
-	\item Die Anwendungen soll sauber und übersichtlich Programmiert werden, sodass spätere Erweiterungen leicht durchzuführen sind.
-	\item Möglichst wenig Code soll in Userexits oder sonsitgen Erweiterungspunkten geschrieben werden, da dieser immer per Hand beim Kunden eingefügt werden muss.
+	\item Die Anwendungen sollen sauber und übersichtlich programmiert werden, sodass spätere Erweiterungen leicht durchzuführen sind.
+	\item Möglichst wenig Code soll in Userexits oder sonstigen Erweiterungspunkten geschrieben werden, da dieser immer per Hand beim Kunden eingefügt werden müssen.
 	\end{enumerate}
 \end{enumerate}
 
