--- a/Inhalt/Analysephase.tex
+++ b/Inhalt/Analysephase.tex
@@ -8,9 +8,7 @@ Das Projekt wurde im Umfeld der Produktionsplanung durchgeführt und bezieht sic
 
 \subsection{Wirtschaftlichkeitsanalyse}
 \label{sec:Wirtschaftlichkeitsanalyse}
-Aufgrund der Probleme, die bereits in der ~\nameref{sec:Projektbegruendung} und der ~\nameref{sec:IstAnalyse} beschrieben wurden, ist ersichtlich, wie wichtig dieses Projekt ist. Trotzdem wurde im folgenden Abschnitt analysieren ob die Umsetzung auch aus wirtschaftlichen Gesichtspunkten gerechtfertigt ist.
-
-todo
+Aufgrund der Probleme, die bereits in der ~\nameref{sec:Projektbegruendung} und der ~\nameref{sec:IstAnalyse} beschrieben wurden, ist ersichtlich, wie wichtig und hilfreich dieses Projekt ist. Trotzdem wurde im folgenden Abschnitt analysieren ob die Umsetzung auch aus wirtschaftlichen Gesichtspunkten gerechtfertigt ist.
 
 \subsubsection{Projektkosten}
 \label{sec:Projektkosten}
@@ -76,7 +74,7 @@ $\frac{\eur{500}}{200 \cdot \eur{2300€} \mbox{/Jahr} } \approx 0,001 \mbox{ Ja
 
 \subsection{Nutzwertanalyse}
 \label{sec:Nutzwertanalyse}
-In der folgenden Tabelle ~\ref{tab:Nutzwertanalyse} werden noch einige weitere Punkte aufgeführt, welche abseits der primären finanziellen Aspekte für diese Produkt bzw. die alten Verfahren sprechen.
+In der folgenden Tabelle ~\ref{tab:Nutzwertanalyse} werden noch einige weitere Punkte aufgeführt, welche abseits der primären finanziellen Aspekte für diese Produkt bzw. die alten Verfahren sprechen. Für Kriterien die in direktem Zusammenhang mit der Produktion und den erzielten Ergebnissen stehen wird eine hohe Wichtung angesetzt Kriterien wie etwa Komfort, welche abhängig von persönliche Präferenzen des Planers sind, werden eher niedrig eingestuft.
 
 \tabelle{Nutzwertanalyse}{tab:Nutzwertanalyse}{Nutzwertanalyse}
 
@@ -95,5 +93,3 @@ Wie bei jedem anderen Projekt der Camelot ITLab GmbH gelten auch hier die Progra
 Das Lastenheft beschreibt die vom ``Auftraggeber festgelegte Gesamtheit der Forderungen an die Lieferungen und Leistungen eines Auftragnehmers innerhalb eines Auftrags``(\cite{Wiki.Induux}). Das Lastenheft, welches im Bezug auf dieses Projekt entstanden ist, befindet sich im \Anhang{app:Lastenheft}. 
 
 \Zwischenstand{Analysephase}{Analyse}
-
-todo paar Sätze
